# clean-flask

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py
app/domain/entities/: __init__.py  ingredient.py  recipe.py  recipe_ingredient.py
env_variables/: test_project_db.env
migrations/: env.py
migrations/versions/: 4a67d18d393f_initial_migration.py
