[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["radu.molnar99 <radumolnar1999@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "3.11.8"
fastapi = "^0.109.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
httpx = "^0.26.0"
pydantic-settings = "^2.2.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mypy = "^1.8.0"
factory-boy = "^3.3.0"
black = "^24.2.0"
isort = "^5.13.2"
pytest-alembic = "^0.10.7"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
